# workspace

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md  read_later.md
docs/external_apps/: alacritty.md  cargo.md  stow.md  zinit.md  zsh.md
dotfiles/alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
dotfiles/zsh/: .p10k.zsh  .zshrc
